<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="alarm_label">Alarm</string>
    <string name="on_label">ON</string>
    <string name="off_label">OFF</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="close_label">Close</string>
    <string name="clear_label">Clear</string>
    <string name="edit_label">Edit</string>
    <string name="stop_label">Stop</string>
    <string name="release_label">Release</string>
    <string name="remain_label">Remain</string>
    <string name="length_label">min</string>
    <string name="times_label">times</string>
    <string name="original_label">Original</string>
    <string name="random_label">Random</string>
    <string name="error_label">Error Info</string>
    <string name="alarm_edit_title">Alarm Edit</string>
    <string name="alarm_name_title">Alarm Name</string>
    <string name="alarm_time_title">Alarm Time</string>
    <string name="alarm_date_title">Alarm Date</string>
    <string name="repeat_title">Repeat</string>
    <string name="alarm_music_title">Alarm Tone</string>
    <string name="music_volume_title">Alarm Volume（0-100％）</string>
    <string name="music_length_title">Alarm Length（1-900sec）</string>
    <string name="voice_title">Voice（Time）</string>
    <string name="vibrator_title">Vibrator</string>
    <string name="snooze_mode_title">Snooze Mode</string>
    <string name="snooze_length_title">Snooze Length（1-30min）</string>
    <string name="snooze_times_title">Snooze Times（1-10times）</string>
    <string name="snooze_release_title">Cancel Snnoze Mode</string>
    <string name="snooze_release_message">Cancel Snnoze Mode. OK?</string>
    <string name="alarm_reset_title">Reset</string>
    <string name="alarm_reset_message">Resetting alarm setup.</string>
    <string name="no_data_message">No matched data.</string>
    <string name="alarm_stopped_message">Alarm has stopped.</string>
    <string name="add_ok_message">Added.</string>
    <string name="add_max_message">Cannot add any more.</string>
    <string name="add_already_message">Already registered.</string>
    <string name="delete_bookmark_message">Remove from Bookmark. OK?</string>
    <string name="clear_error_message">Clear Error Info. OK?</string>
</resources>
