<?xml version="1.0" encoding="utf-8"?> 

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/snooze_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dip"
        android:textStyle="bold"
        android:typeface="sans"
        android:textSize="24sp"
        android:textColor="#ff0066ff"
        android:lines="1"
        android:ellipsize="end"
        android:scrollHorizontally="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/snooze_title_textview"
        android:layout_marginTop="20dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:typeface="normal"
            android:textSize="22sp"
            android:text="@string/remain_label" />

        <TextView
            android:id="@+id/snooze_length_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:typeface="normal"
            android:textSize="22sp"
            android:text="@string/length_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/snooze_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textSize="28sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:textStyle="bold"
            android:typeface="sans"
            android:textSize="24sp"
            android:textColor="#ff0066ff"
            android:text="@string/snooze_mode_title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="22sp"
                android:text="@string/remain_label" />

            <TextView
                android:id="@+id/snooze_times_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:typeface="monospace"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="22sp"
                android:text="@string/times_label" />

        </LinearLayout>

        <Button
            android:id="@+id/release_button"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/release_label" />

    </LinearLayout>
</RelativeLayout>
